Asg3/k8s-2/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: auth
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-2-default: "true"
        io.kompose.service: auth
    spec:
      containers:
        - env:
            - name: APP_SECRET
              value: web-service-auth
            - name: EXPIRE_TIME
              value: 60*60*24
            - name: JWT_SECRET
              value: this_is_a_jwt_secret
            - name: POSTGRES_URI
              value: postgresql://postgres:postgres@db:5432/users
          image: roylife/web-service-auth:v2
          name: auth
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
