Asg3/k8s-2/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3000
      # nodePort: 30000
  type: NodePort
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
