Asg3/k8s-2/shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: shortener
  name: shortener
spec:
  selector:
    app: shortener
  ports:
    - protocol: TCP
      port: 3001
      # nodePort: 30001
  type: NodePort
  selector:
    io.kompose.service: shortener
status:
  loadBalancer: {}
