Asg3/k8s-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /users
          pathType: Prefix
          backend:
            service:
              name: auth
              port:
                number: 3000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: shortener
              port:
                number: 3001
